@@ -321,6 +321,10 @@
 <MODE NAME="maven"		FILE="maven.xml"
 				FILE_NAME_GLOB="pom.xml"/>
 
+<MODE NAME="metapost"
+         FILE="mpost.xml"
+         FILE_NAME_GLOB="*.mp"/>				
+				
 <MODE NAME="ml"			FILE="ml.xml"
 				FILE_NAME_GLOB="*.{sml,ml}" />
 
